sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe Rect representation.
 */
typedef struct FfiRect {
    /**
     * X position of the rectangle.
     */
    float x;
    /**
     * Y position of the rectangle.
     */
    float y;
    /**
     * Width of the rectangle.
     */
    float width;
    /**
     * Height of the rectangle.
     */
    float height;
} FfiRect;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * Heap-allocated transform builder for FFI use.
 */
typedef struct FfiTransform2DBuilder {
    /**
     * The transform being built.
     */
    struct FfiTransform2D transform;
} FfiTransform2DBuilder;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/* === Transform2D === */

/**
 * Creates a new transform builder with default values.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_new(void);
/**
 * Creates a new transform builder at a specific position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_at_position(float x, float y);
/**
 * Sets the position on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_position(struct FfiTransform2DBuilder *builder, float x, float y);
/**
 * Sets the rotation (in radians) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation(struct FfiTransform2DBuilder *builder, float rotation);
/**
 * Sets the rotation (in degrees) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation_degrees(struct FfiTransform2DBuilder *builder, float degrees);
/**
 * Sets the scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale(struct FfiTransform2DBuilder *builder, float scale_x, float scale_y);
/**
 * Sets uniform scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale_uniform(struct FfiTransform2DBuilder *builder, float scale);
/**
 * Makes the builder's transform look at a target position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_looking_at(struct FfiTransform2DBuilder *builder, float target_x, float target_y);
/**
 * Translates the builder's position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_translate(struct FfiTransform2DBuilder *builder, float dx, float dy);
/**
 * Rotates the builder's transform.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_rotate(struct FfiTransform2DBuilder *builder, float angle);
/**
 * Multiplies the builder's scale.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_scale_by(struct FfiTransform2DBuilder *builder, float factor_x, float factor_y);
/**
 * Builds and consumes the transform builder, returning the final transform.
 */
struct FfiTransform2D goud_transform2d_builder_build(struct FfiTransform2DBuilder *builder);
/**
 * Frees a transform builder without building.
 */
void goud_transform2d_builder_free(struct FfiTransform2DBuilder *builder);
/**
 * Returns the forward direction vector (positive X axis after rotation).
 */
struct FfiVec2 goud_transform2d_forward(const struct FfiTransform2D *transform);
/**
 * Returns the right direction vector (positive Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_right(const struct FfiTransform2D *transform);
/**
 * Returns the backward direction vector (negative X axis after rotation).
 */
struct FfiVec2 goud_transform2d_backward(const struct FfiTransform2D *transform);
/**
 * Returns the left direction vector (negative Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_left(const struct FfiTransform2D *transform);
/**
 * Computes the 3x3 transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix(const struct FfiTransform2D *transform);
/**
 * Computes the inverse transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix_inverse(const struct FfiTransform2D *transform);
/**
 * Transforms a point from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Transforms a point from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Linearly interpolates between two transforms.
 */
struct FfiTransform2D goud_transform2d_lerp(struct FfiTransform2D from, struct FfiTransform2D to, float t);
/**
 * Normalizes an angle to the range [-PI, PI).
 */
float goud_transform2d_normalize_angle(float angle);
/**
 * Translates the transform in local space.
 */
void goud_transform2d_translate_local(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Sets the position of the transform.
 */
void goud_transform2d_set_position(struct FfiTransform2D *transform, float x, float y);
/**
 * Gets the position of the transform.
 */
struct FfiVec2 goud_transform2d_get_position(const struct FfiTransform2D *transform);
/**
 * Rotates the transform by the given angle in radians.
 */
void goud_transform2d_rotate(struct FfiTransform2D *transform, float angle);
/**
 * Rotates the transform by the given angle in degrees.
 */
void goud_transform2d_rotate_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Sets the rotation angle in radians.
 */
void goud_transform2d_set_rotation(struct FfiTransform2D *transform, float rotation);
/**
 * Sets the rotation angle in degrees.
 */
void goud_transform2d_set_rotation_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Gets the rotation angle in radians.
 */
float goud_transform2d_get_rotation(const struct FfiTransform2D *transform);
/**
 * Gets the rotation angle in degrees.
 */
float goud_transform2d_get_rotation_degrees(const struct FfiTransform2D *transform);
/**
 * Makes the transform look at a target position.
 */
void goud_transform2d_look_at_target(struct FfiTransform2D *transform, float target_x, float target_y);
/**
 * Sets the scale of the transform.
 */
void goud_transform2d_set_scale(struct FfiTransform2D *transform, float scale_x, float scale_y);
/**
 * Sets uniform scale on both axes.
 */
void goud_transform2d_set_scale_uniform(struct FfiTransform2D *transform, float scale);
/**
 * Gets the scale of the transform.
 */
struct FfiVec2 goud_transform2d_get_scale(const struct FfiTransform2D *transform);
/**
 * Multiplies the current scale by the given factors.
 */
void goud_transform2d_scale_by(struct FfiTransform2D *transform, float factor_x, float factor_y);
/**
 * Sets the color tint for this sprite.
 */
void goud_sprite_set_color(struct FfiSprite *sprite, float r, float g, float b, float a);
/**
 * Gets the color tint of the sprite.
 */
struct FfiColor goud_sprite_get_color(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified color tint (builder pattern).
 */
struct FfiSprite goud_sprite_with_color(struct FfiSprite sprite, float r, float g, float b, float a);
/**
 * Sets the alpha (transparency) for this sprite.
 */
void goud_sprite_set_alpha(struct FfiSprite *sprite, float alpha);
/**
 * Gets the alpha (transparency) of the sprite.
 */
float goud_sprite_get_alpha(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with default settings.
 */
struct FfiSprite goud_sprite_new(uint64_t texture_handle);
/**
 * Creates a default sprite with an invalid texture handle.
 */
struct FfiSprite goud_sprite_default(void);
/**
 * Sets the source rectangle for sprite sheet rendering.
 */
void goud_sprite_set_source_rect(struct FfiSprite *sprite, float x, float y, float width, float height);
/**
 * Removes the source rectangle, rendering the full texture.
 */
void goud_sprite_clear_source_rect(struct FfiSprite *sprite);
/**
 * Gets the source rectangle of the sprite.
 */
bool goud_sprite_get_source_rect(const struct FfiSprite *sprite, struct FfiRect *out_rect);
/**
 * Returns whether the sprite has a source rectangle set.
 */
bool goud_sprite_has_source_rect(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified source rectangle (builder pattern).
 */
struct FfiSprite goud_sprite_with_source_rect(struct FfiSprite sprite, float x, float y, float width, float height);
/**
 * Sets the horizontal flip flag.
 */
void goud_sprite_set_flip_x(struct FfiSprite *sprite, bool flip);
/**
 * Gets the horizontal flip flag.
 */
bool goud_sprite_get_flip_x(const struct FfiSprite *sprite);
/**
 * Sets the vertical flip flag.
 */
void goud_sprite_set_flip_y(struct FfiSprite *sprite, bool flip);
/**
 * Gets the vertical flip flag.
 */
bool goud_sprite_get_flip_y(const struct FfiSprite *sprite);
/**
 * Sets both flip flags at once.
 */
void goud_sprite_set_flip(struct FfiSprite *sprite, bool flip_x, bool flip_y);
/**
 * Creates a new sprite with the specified horizontal flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_x(struct FfiSprite sprite, bool flip);
/**
 * Creates a new sprite with the specified vertical flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_y(struct FfiSprite sprite, bool flip);
/**
 * Creates a new sprite with both flip flags set (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip(struct FfiSprite sprite, bool flip_x, bool flip_y);
/**
 * Returns true if the sprite is flipped on either axis.
 */
bool goud_sprite_is_flipped(const struct FfiSprite *sprite);
/**
 * Sets the anchor point with individual coordinates.
 */
void goud_sprite_set_anchor(struct FfiSprite *sprite, float x, float y);
/**
 * Gets the anchor point of the sprite.
 */
struct FfiVec2 goud_sprite_get_anchor(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified anchor (builder pattern).
 */
struct FfiSprite goud_sprite_with_anchor(struct FfiSprite sprite, float x, float y);
/**
 * Sets a custom size for the sprite.
 */
void goud_sprite_set_custom_size(struct FfiSprite *sprite, float width, float height);
/**
 * Removes the custom size, using texture dimensions.
 */
void goud_sprite_clear_custom_size(struct FfiSprite *sprite);