sdks/csharp/generated/NativeMethods.g.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_translate_local(ref FfiTransform2D transform, float dx, float dy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_set_position(ref FfiTransform2D transform, float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_get_position(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_rotate(ref FfiTransform2D transform, float angle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_rotate_degrees(ref FfiTransform2D transform, float degrees);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_set_rotation(ref FfiTransform2D transform, float rotation);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_set_rotation_degrees(ref FfiTransform2D transform, float degrees);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_transform2d_get_rotation(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_transform2d_get_rotation_degrees(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_look_at_target(ref FfiTransform2D transform, float target_x, float target_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_set_scale(ref FfiTransform2D transform, float scale_x, float scale_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_set_scale_uniform(ref FfiTransform2D transform, float scale);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_get_scale(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_scale_by(ref FfiTransform2D transform, float factor_x, float factor_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_forward(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_right(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_backward(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_left(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiMat3x3 goud_transform2d_matrix(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiMat3x3 goud_transform2d_matrix_inverse(ref FfiTransform2D transform);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_transform_point(ref FfiTransform2D transform, float point_x, float point_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_transform_direction(ref FfiTransform2D transform, float dir_x, float dir_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_inverse_transform_point(ref FfiTransform2D transform, float point_x, float point_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_transform2d_inverse_transform_direction(ref FfiTransform2D transform, float dir_x, float dir_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_lerp(FfiTransform2D from, FfiTransform2D to, float t);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_transform2d_normalize_angle(float angle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_new();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_at_position(float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_with_position(IntPtr builder, float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_with_rotation(IntPtr builder, float rotation);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_with_rotation_degrees(IntPtr builder, float degrees);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_with_scale(IntPtr builder, float scale_x, float scale_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_with_scale_uniform(IntPtr builder, float scale);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_looking_at(IntPtr builder, float target_x, float target_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_translate(IntPtr builder, float dx, float dy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_rotate(IntPtr builder, float angle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_transform2d_builder_scale_by(IntPtr builder, float factor_x, float factor_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_builder_build(IntPtr builder);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_builder_free(IntPtr builder);

        // component_sprite
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_new(ulong texture_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_color(ref FfiSprite sprite, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_sprite_get_color(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_color(FfiSprite sprite, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_alpha(ref FfiSprite sprite, float alpha);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_sprite_get_alpha(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_source_rect(ref FfiSprite sprite, float x, float y, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_clear_source_rect(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiRect goud_sprite_get_source_rect(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_has_source_rect(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_source_rect(FfiSprite sprite, float x, float y, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_flip_x(ref FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_flip_x(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_flip_y(ref FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_flip_y(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_flip(ref FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_flip_x(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_flip_y(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_flip(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_is_flipped(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_anchor(ref FfiSprite sprite, float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_sprite_get_anchor(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_anchor(FfiSprite sprite, float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_custom_size(ref FfiSprite sprite, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_clear_custom_size(ref FfiSprite sprite);
